--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "CUDA-CAT/Source/Engine"]
-	path = CUDA-CAT/Source/Engine
+[submodule "Voxel-Trace/Source/Engine"]
+	path = Voxel-Trace/Source/Engine
 	url = https://github.com/JuanDiegoMontoya/EngineBase.git
