--- a/Voxel-Trace/Source/Source.vcxproj
+++ b/Voxel-Trace/Source/Source.vcxproj
@@ -225,6 +225,7 @@ copy "$(SolutionDir)lib\CUDA\cudart64_102.dll" "$(TargetDir)cudart64_102.dll" /Y
     <CudaCompile />
     <CudaCompile>
       <TargetMachinePlatform>64</TargetMachinePlatform>
+      <GenerateLineInfo>true</GenerateLineInfo>
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
